# oscar_robot_setup

./: README.md
oscar_moveit_com/: CMakeLists.txt  package.xml
oscar_moveit_com/include/oscar_moveit_com/: com.h  transform_frame.h
oscar_moveit_com/launch/: load_oscar_ur3_lab3023.launch  load_oscar_ur3_lab_mobile_fts_gripper.launch  view_oscar_ur3_lab_mobile_fts_gripper.launch
oscar_moveit_com/scripts/: transform_pose
oscar_moveit_com/src/: com.cpp  pipette_tool_com.cpp  transform_frame.cpp  ur3_tool_com.cpp
oscar_panda_lab3023_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
oscar_panda_lab3023_moveit_config/config/: cartesian_limits.yaml  fake_controllers.yaml  gazebo_oscar_panda_lab3023.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  oscar_panda_lab3023.srdf  stomp_planning.yaml
oscar_panda_lab3023_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
oscar_robot_setup_bringup/: CMakeLists.txt  package.xml
oscar_robot_setup_bringup/config/: ur3_controllers.yaml  ur3_fts_gripper_controllers.yaml
oscar_robot_setup_bringup/etc/: mimik_ur3_lab3023.hand_to_eye_calibration.rviz  mimik_ur3_lab_mobile.rviz  mimik_ur3_lab_mobile_capture_tool.rviz
oscar_robot_setup_bringup/launch/: mimik_ur3_lab3023_bringup.launch  mimik_ur3_lab3023_bringup_move_group.launch  mimik_ur3_lab3023_hand_to_eye_calibration.launch  mimik_ur3_lab_mobile_bringup.launch  mimik_ur3_lab_mobile_bringup_move_group.launch  mimik_ur3_lab_mobile_capture_tool_bringup.launch  mimik_ur3_lab_mobile_fts_gripper_bringup.launch
oscar_robot_setup_description/: CMakeLists.txt  package.xml
oscar_robot_setup_description/config/: ur3_visual_parameters_vhacd_h1.yaml  ur3_visual_parameters_vhacd_h16.yaml  view_oscar_ur3_lab_mobile_capture_tool.rviz  view_oscar_ur3_lab_mobile_fts_gripper.rviz
oscar_robot_setup_description/launch/: load_mimik_ur3_lab_mobile.launch  load_mimik_ur3_lab_mobile_capture_tool.launch  view_mimik_ur3_lab3023.launch  view_mimik_ur3_lab_mobile.launch  view_mimik_ur3_lab_mobile_capture_tool.launch
oscar_robot_setup_description/urdf/: oscar_panda_lab3023.xacro  oscar_ur3_lab3023.xacro  oscar_ur3_lab_mobile.xacro  oscar_ur3_lab_mobile_capture_tool.xacro  oscar_ur3_lab_mobile_fts_gripper.xacro  oscar_ur5_lab3023.xacro
oscar_robot_setup_description/urdf/include/: panda.macro.xacro
oscar_ur3_lab3023_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
oscar_ur3_lab3023_moveit_config/config/: gazebo_oscar_ur3_lab3023.urdf  joint_limits.yaml  ompl_planning.yaml  oscar_ur3_lab3023.srdf  simple_moveit_controllers.yaml
oscar_ur3_lab3023_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  gazebo.launch  (+11 more)
oscar_ur3_lab_mobile_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
oscar_ur5_lab3023_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+48 files in other folders)
