<?xml version="1.0"?>
<package format="2">
  <name>oscar_moveit_com</name>
  <version>0.0.0</version>
  <description>Center of mass computation for different robot setup's</description>

  <author>Captain Yoshi</author>
  <maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>orocos_kdl</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>kdl_conversions</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

</package>
