<?xml version="1.0"?>
<package format="2">
  <name>oscar_robot_setup_bringup</name>
  <version>0.0.0</version>
  <description>OSCAR robot setup</description>

  <author>Captain Yoshi</author>
  <maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>oscar_ur_launch</exec_depend>
  <exec_depend>oscar_robot_setup_description</exec_depend>

</package>
